--- a/deli-user-creation-api/utils/confirmation_email_template.html
+++ b/deli-user-creation-api/utils/confirmation_email_template.html
@@ -2,7 +2,8 @@
 <html xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office" lang="en">
 
 <head>
-	<title></title>
+	<title>Confirmation email Deli</title>
+	<meta charset="UTF-8">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"><!--[if mso]><xml><o:OfficeDocumentSettings><o:PixelsPerInch>96</o:PixelsPerInch><o:AllowPNG/></o:OfficeDocumentSettings></xml><![endif]--><!--[if !mso]><!--><!--<![endif]-->
 	<style>
@@ -72,8 +73,8 @@
 	</style>
 </head>
 
-<body style="background-color: #FFFFFF; margin: 0; padding: 0; -webkit-text-size-adjust: none; text-size-adjust: none;">
-	<table class="nl-container" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #FFFFFF;">
+<body style="background-color: #FFFFFF; margin: 0; padding: 0; -webkit-text-size-adjust: none; text-size-adjust: none; display: flex; justify-content: center;">
+	<table class="nl-container" width="25%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #FFFFFF;">
 		<tbody>
 			<tr>
 				<td>
@@ -89,7 +90,7 @@
 														<tr>
 															<td class="pad" style="width:100%;padding-right:0px;padding-left:0px;">
 																<div class="alignment" align="center" style="line-height:10px">
-																	<div style="max-width: 100px;"><img src="https://d15k2d11r6t6rl.cloudfront.net/public/users/Integrators/BeeProAgency/1140784_1126414/imported/deli%20logo%20white.png" style="display: block; height: auto; border: 0; width: 100%;" width="100"></div>
+																	<div style="max-width: 100px;"><img src="https://d15k2d11r6t6rl.cloudfront.net/public/users/Integrators/BeeProAgency/1140784_1126414/imported/deli%20logo%20white.png" style="display: block; height: auto; border: 0; width: 75%;" width="100"></div>
 																</div>
 															</td>
 														</tr>
@@ -113,7 +114,7 @@
 													<table class="heading_block block-1" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
 														<tr>
 															<td class="pad" style="padding-left:30px;padding-right:30px;padding-top:30px;text-align:center;width:100%;">
-																<h1 style="margin: 0; color: #ff4a4a; direction: ltr; font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; font-size: 38px; font-weight: 700; letter-spacing: normal; line-height: 120%; text-align: center; margin-top: 0; margin-bottom: 0; mso-line-height-alt: 45.6px;"><strong><span class="tinyMce-placeholder">Bienvenido a deli username!</span></strong></h1>
+																<h1 style="margin: 0; color: #ff4a4a; direction: ltr; font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; font-size: 38px; font-weight: 700; letter-spacing: normal; line-height: 120%; text-align: center; margin-top: 0; margin-bottom: 0; mso-line-height-alt: 45.6px;"><strong><span class="tinyMce-placeholder">&iexcl;Bienvenido a deli username!</span></strong></h1>
 															</td>
 														</tr>
 													</table>
@@ -130,7 +131,7 @@
 														<tr>
 															<td class="pad" style="padding-bottom:10px;padding-left:10px;padding-right:10px;padding-top:35px;">
 																<div style="color:#101112;direction:ltr;font-family:Arial, 'Helvetica Neue', Helvetica, sans-serif;font-size:11px;font-weight:400;letter-spacing:0px;line-height:120%;text-align:center;mso-line-height-alt:13.2px;">
-																	<p style="margin: 0;"><strong>Haz click en el siguiente botón para confirmar tu registro:</strong></p>
+																	<p style="margin: 0;"><strong>Haz click en el siguiente bot&oacute;n para confirmar tu registro:</strong></p>
 																</div>
 															</td>
 														</tr>
@@ -151,7 +152,7 @@
 														<tr>
 															<td class="pad" style="padding-bottom:10px;padding-left:10px;padding-right:10px;padding-top:45px;">
 																<div style="color:#101112;direction:ltr;font-family:Arial, 'Helvetica Neue', Helvetica, sans-serif;font-size:14px;font-weight:400;letter-spacing:0px;line-height:120%;text-align:center;mso-line-height-alt:16.8px;">
-																	<p style="margin: 0;"><strong>¡Esperamos que lo disfrutes tanto como nosotros!</strong></p>
+																	<p style="margin: 0;"><strong>&iexcl;Esperamos que lo disfrutes tanto como nosotros!</strong></p>
 																</div>
 															</td>
 														</tr>
@@ -164,7 +165,7 @@
 							</tr>
 						</tbody>
 					</table>
-					<table class="row row-3" align="center" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #e8e8e8;">
+					<table class="row row-3" align="center" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #e8e8e8; display: flex; height: 100px; flex-direction: column; margin-top: 35px;">
 						<tbody>
 							<tr>
 								<td>
@@ -174,9 +175,9 @@
 												<td class="column column-1" width="100%" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; font-weight: 400; text-align: left; padding-bottom: 5px; padding-top: 5px; vertical-align: top; border-top: 0px; border-right: 0px; border-bottom: 0px; border-left: 0px;">
 													<table class="image_block block-1" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
 														<tr>
-															<td class="pad" style="width:100%;padding-right:0px;padding-left:0px;">
-																<div class="alignment" align="center" style="line-height:10px">
-																	<div style="max-width: 100px;"><img src="https://d15k2d11r6t6rl.cloudfront.net/public/users/Integrators/BeeProAgency/1140784_1126414/imported/output-onlinepngtools%20%281%29.png" style="display: block; height: auto; border: 0; width: 100%;" width="100"></div>
+															<td class="pad" style="width:100%;padding-right:0px;padding-left:0px; display: flex; justify-content: space-between;">
+																<div class="alignment" align="center" style="line-height:10px; display: flex; justify-content: space-between; align-items: center; margin-left: 28px; margin-top: 15px;">
+																	<div style="max-width: 100px;"><img src="https://d15k2d11r6t6rl.cloudfront.net/public/users/Integrators/BeeProAgency/1140784_1126414/imported/output-onlinepngtools%20%281%29.png" style="height: 30px; border: 0; width: 100%;" width="100"></div>
 																</div>
 															</td>
 														</tr>
@@ -185,6 +186,7 @@
 											</tr>
 										</tbody>
 									</table>
+									<p style="margin-left: 30px; font-family: Arial; font-size: 8px;">Si necesit&aacute;s ayuda no dudes en dirigirte a nuestra &aacute;rea de soporte o contactarnos a trav&eacute;s del <b>chat del sistema.</b></p>
 								</td>
 							</tr>
 						</tbody>
